--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Dereck Rock</h1>
 <h4>Thourght the semester we have learned many different things with the help of khanacademy and its diverse modules</h4>
 <p>The first module I am going to be talking about is the Intro to JS.</p>
-  <img src="Screenshot(3).png" alt="code" width="104" height="142">
+  <img src="https://raw.githubusercontent.com/dereckrocj/dereckrocj-examproject/gh-pages/Screenshot%20(3).png" alt="Rabbit with lop ears in barn">
 
 </body> 
 
