--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
+								<a href="#" class="icon solid fa-angle-down">Top 4 list</a>
 								<ul>
 									<li><a href="generic.html">Generic</a></li>
 								
