--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 							<h2>My top Ten list,
 							<br />
 							</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+							<p>Thourght the semester we have learned many different things with the help of khanacademy and its diverse modules</p>
 						</header>
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					</section>
@@ -65,6 +64,7 @@
 					<section class="box special features">
 						<div class="features-row">
 							<section>
+								<span class="icon solid major fa-bolt accent2"></span>
 								<h3>Intro to JS</h3>
 								<p>My favourite project in the intro to js module was the 8-ball, The introduction to if stements
 								   and what you can do with them is very important and is somthing I will continue to use.As 
