--- a/generic.html
+++ b/generic.html
@@ -48,9 +48,14 @@
 						</p>
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-						<h3>This is a subheading</h3>
-						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+						<span class="icon solid major fa-cloud aiquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+							<h3>Intro to SQL </h3>
+						                 <p> The intro to SQL focuses mainly on storying data in a data base for adding, modifiying and querying that data.
+									     This module has impacted me in that I know have learned a differnet way to store data in code. This is very
+									     important if I want to become a software engineer as there jobs are to make software which will have to store data in them.
+									     
+									     
+									     </p>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>And now a subheading</h3>
