--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						</div>
 					</section>
 
-					<section class="box special features">
+					<section class="box special ">
 						<div class="features-row">
 							<div class="col-6 col-12-narrower">
 							<section>
