--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 						</div>
 					</section>
 
-					<section class="box special ">
+					<section class="box special features ">
 						<div class="features-row">
-							<div class="col-6 col-12-narrower">
+							
 							<section>
 								<span class="icon solid major fa-cloud aiquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							<h3>Intro to SQL </h3>
