--- a/generic.html
+++ b/generic.html
@@ -102,27 +102,24 @@
 						</p>
 
 
-<h2>Blob-refactoring</h2>
-						<p>The blob presentation was amazing it taught me a lot of new things like how you can implement trigonometry
-					into your code. Like with the uses of PIE,COS and sin to make objects moving around the screen bouncing on walls and changing direction when
-							they hit the boarders. This impacted me as i now see the many different ways that computer science and math are all most the same thing as they both studie patterns and
-							algorithms.with my refactoring I changed the hue so when they come closer in contact with each other the color change is more drastice
+<h2>snake-refactoring</h2>
+						<p>During my snake refacrtoring i learend alot of may important things like what a vector really is. A vector is an entity that has both magnitude and direction, this was a very important
+							part of the project as the "snake" need to move around and interact with the spaces its in as well as the objects around it.The createVector function made it possible by giving the 
+							snake a physical body you could say to interact. 
 						</p>
 
 
-<h2>Blob-refactoring</h2>
-						<p>The blob presentation was amazing it taught me a lot of new things like how you can implement trigonometry
-					into your code. Like with the uses of PIE,COS and sin to make objects moving around the screen bouncing on walls and changing direction when
-							they hit the boarders. This impacted me as i now see the many different ways that computer science and math are all most the same thing as they both studie patterns and
-							algorithms.with my refactoring I changed the hue so when they come closer in contact with each other the color change is more drastice
-						</p>
+<h2>random flower-refactoring</h2>
+						<p>The random flower presentation was amazing it taught me a lot of new things like how you can implement trigonometry
+					into your code, as well as the use of the hue function in p5 and getAngle which creates new 2D vectors form an agnle.The way this has effected me is that I know 
+							now how can tie themselfs into different things and have multipule uses.
+								<a href="https://editor.p5js.org/dereck/sketches/gZT7Hchhv">Visit to see my code</a>
 
 
-<h2>Blob-refactoring</h2>
-						<p>The blob presentation was amazing it taught me a lot of new things like how you can implement trigonometry
-					into your code. Like with the uses of PIE,COS and sin to make objects moving around the screen bouncing on walls and changing direction when
-							they hit the boarders. This impacted me as i now see the many different ways that computer science and math are all most the same thing as they both studie patterns and
-							algorithms.with my refactoring I changed the hue so when they come closer in contact with each other the color change is more drastice
+<h2>INtro to P5.js</h2>
+						<p>This project was something that I worked on my self As we were newly introduced to P5 to understande the HTML Its a basic code but that was the building block of this wesite.
+							Along with git hub and free code camp this little project Gave me the understanding of how HTML really looks and hot each code snippet interactions with the wesite.
+							<a href="https://editor.p5js.org/dereck/sketches/EIuiznhfb">Visit to see my code</a>
 						</p>
 
 
