--- a/generic.html
+++ b/generic.html
@@ -100,6 +100,8 @@
 							they hit the boarders. This impacted me as i now see the many different ways that computer science and math are all most the same thing as they both studie patterns and
 							algorithms.with my refactoring I changed the hue so when they come closer in contact with each other the color change is more drastice
 						</p>
+                                                                
+								<a href="https://editor.p5js.org/dereck/sketches/LEUYQ9XFy">Visit to see my code</a>
 
 
 <h2>snake-refactoring</h2>
@@ -107,6 +109,7 @@
 							part of the project as the "snake" need to move around and interact with the spaces its in as well as the objects around it.The createVector function made it possible by giving the 
 							snake a physical body you could say to interact. 
 						</p>
+								<a href="https://editor.p5js.org/dereck/sketches/YZ3fQRGfX">Visit to see my code</a>
 
 
 <h2>random flower-refactoring</h2>
@@ -123,11 +126,9 @@
 						</p>
 
 
-<h2>Blob-refactoring</h2>
-						<p>The blob presentation was amazing it taught me a lot of new things like how you can implement trigonometry
-					into your code. Like with the uses of PIE,COS and sin to make objects moving around the screen bouncing on walls and changing direction when
-							they hit the boarders. This impacted me as i now see the many different ways that computer science and math are all most the same thing as they both studie patterns and
-							algorithms.with my refactoring I changed the hue so when they come closer in contact with each other the color change is more drastice
+<h2>free coddecamp</h2>
+						<p>This module was a continuation of the intro to HTML with alot more advanced functions like if statements and else if statements and different classes that 
+							can change the way buttons or links look and function.
 						</p>
 
 
