--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><img src="algorithems.jpg" alt="" /></span>
+								<span class="image featured"><img src="algorithems.jpeg" alt="" /></span>
 								<h3>Algoritms</h3>
 								<p>
 								In the Algoritms module you learen about patterns that are found and codes and uses them to be able to change and sort data.
