--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Alpha</h2>
-					<p>Another fine responsive site template freebie by HTML5 UP.</p>
+					<h2></h2>
+					<p>.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button primary"></a></li>
 						<li><a href="#" class="button"></a></li>
@@ -58,7 +58,8 @@
 							</h2>
 							<p>Thourght the semester we have learned many different things with the help of khanacademy and its diverse modules</p>
 						</header>
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image featured"><img src="algorithems.jpeg
+" alt="" /></span>
 					</section>
 
 					<section class="box special features">
