--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 							</h2>
 							<p>Thourght the semester we have learned many different things with the help of khanacademy and its diverse modules</p>
 						</header>
-						<span class="image featured"><img src="algorithems.jpeg
-" alt="" /></span>
+						<span class="image featured"><img src="algorithems.jpg" alt="algo" /></span>
+
 					</section>
 
 					<section class="box special features">
