--- a/generic.html
+++ b/generic.html
@@ -126,9 +126,10 @@
 						</p>
 
 
-<h2>free coddecamp</h2>
+<h2>free coddecamp(sass)</h2>
 						<p>This module was a continuation of the intro to HTML with alot more advanced functions like if statements and else if statements and different classes that 
-							can change the way buttons or links look and function.
+							can change the way buttons or links look and function. The Impact this module made on me is that I can now see how wesite now adays are so
+							interactive. With this kind of coding the uses can interactd not only with others but the wesite it self making it feel more welcoming.
 						</p>
 
 
