--- a/generic.html
+++ b/generic.html
@@ -104,7 +104,7 @@
 								<a href="https://editor.p5js.org/dereck/sketches/LEUYQ9XFy">Visit to see my code</a>
 
 
-<h2>snake-refactoring</h2>
+<h2>Snake-refactoring</h2>
 						<p>During my snake refacrtoring i learend alot of may important things like what a vector really is. A vector is an entity that has both magnitude and direction, this was a very important
 							part of the project as the "snake" need to move around and interact with the spaces its in as well as the objects around it.The createVector function made it possible by giving the 
 							snake a physical body you could say to interact. 
@@ -112,7 +112,7 @@
 								<a href="https://editor.p5js.org/dereck/sketches/YZ3fQRGfX">Visit to see my code</a>
 
 
-<h2>random flower-refactoring</h2>
+<h2>Random flower-refactoring</h2>
 						<p>The random flower presentation was amazing it taught me a lot of new things like how you can implement trigonometry
 					into your code, as well as the use of the hue function in p5 and getAngle which creates new 2D vectors form an agnle.The way this has effected me is that I know 
 							now how can tie themselfs into different things and have multipule uses.
@@ -126,7 +126,7 @@
 						</p>
 
 
-<h2>free coddecamp(sass)</h2>
+<h2>Freecodecamp sass</h2>
 						<p>This module was a continuation of the intro to HTML with alot more advanced functions like if statements and else if statements and different classes that 
 							can change the way buttons or links look and function. The Impact this module made on me is that I can now see how wesite now adays are so
 							interactive. With this kind of coding the uses can interactd not only with others but the wesite it self making it feel more welcoming.
