--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</h2>
 							<p>Thourght the semester we have learned many different things with the help of khanacademy and its diverse modules</p>
 						</header>
-						<span class="image featured"><img src="algorithems.jpg" alt="algo" /></span>
+						<span class="image featured"><img src="" alt="" /></span>
 
 					</section>
 
