--- a/generic.html
+++ b/generic.html
@@ -56,7 +56,7 @@
 						<header class="major">
 
 
-							<h2>My top Ten list,
+							<h2>My top Five list,
 
 
 							<br />
@@ -65,7 +65,7 @@
 							</h2>
 
 
-							<p>Thourght the semester we have learned many different things with the help of khanacademy and its diverse modules</p>
+							
 
 
 						</header>
@@ -136,53 +136,7 @@
 							</section>
 
 
-							<section>
-
-
-								<span class="icon solid major fa-chart-area accent3"></span>
-
-
-								<h3>Intro to HTML/CSS</h3>
-
-
-								<p>The Introduction to THTML/CSS module was about leanering how to use differnt types of texts with
-
-
-								   Headers,style changes which can change baound and text colors and many more.The part of the
-
-
-							           module at least for that had the biggest impact I think is the style changes. I think this
-
-
-			                                           becuase it makes it so you can change your website in the way you want it to be making it
-
-
-								   more special and Unique</p>
-
-
-							</section>"></span>
-
-
-								<h3>Advanced JS:Natural Simulations</h3>
-
-
-								<p>The Advanced JS:Natural Simulation module is an expantion on the more basic intro to Js.
-
-
-									The advanced Js feture some new things like floors and randoms which are very important
-
-
-									components of coding making it so that the"pc" can play as well. I think that random function
-
-
-									is the most important because I my self like making games and with the random function you can
-
-
-									add a bot that the player can go against with the random function picking loctions and movements </p>
-
-
-						</div>
-
+							
 
 					</section>
 
