--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<section>
 
 
-								<span class="icon solid major fa-bolt accent2"></span>
+								<img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjrm-r4uqvnAhWemHIEHQq8AWAQjRx6BAgBEAQ&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AAlgorithms-NetFlow1.png&psig=AOvVaw1knm8J-B8kfGnOZ9Zazp3D&ust=1580478385858532" alt="words"></span>
 
 
 <h2>Blob-refactoring</h2>
