--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<section>
 
 
-								<img src="algo.PNG" alt="words"></span>
+								
 
 
 <h2>Blob-refactoring</h2>
@@ -171,7 +171,8 @@
 									     
 									     </p>
 						<span class="image featured"><img src="algorithems.jpeg" alt="" /></span>
-								<h3>Algoritms</h3>
+						<img src="algo.PNG" alt="words"width="128" height="128"></span>		
+						<h3>Algoritms</h3>
 								<p>
 								In the Algoritms module you learen about patterns that are found and codes and uses them to be able to change and sort data.
 							        This module has given me the bases of computer programing as almost all things are Algoritms not just in computer science. An 
