--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						</p>
 								<a href="https://editor.p5js.org/dereck/sketches/YZ3fQRGfX">Visit to see my code</a>
 
-
+<img src="algo.PNG" alt="words"width="128" height="128"></span>		
 <h2>Random flower-refactoring</h2>
 						<p>The random flower presentation was amazing it taught me a lot of new things like how you can implement trigonometry
 					into your code, as well as the use of the hue function in p5 and getAngle which creates new 2D vectors form an agnle.The way this has effected me is that I know 
