--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 								
 
-
+<img src="blob.PNG" alt="words"width="128" height="128"></span>	
 <h2>Blob-refactoring</h2>
 						<p>The blob presentation was amazing it taught me a lot of new things like how you can implement trigonometry
 					into your code. Like with the uses of PIE,COS and sin to make objects moving around the screen bouncing on walls and changing direction when
@@ -103,7 +103,7 @@
                                                                 
 								<a href="https://editor.p5js.org/dereck/sketches/LEUYQ9XFy">Visit to see my code</a>
 
-
+<img src="snake.PNG" alt="words"width="128" height="128"></span>	
 <h2>Snake-refactoring</h2>
 						<p>During my snake refacrtoring i learend alot of may important things like what a vector really is. A vector is an entity that has both magnitude and direction, this was a very important
 							part of the project as the "snake" need to move around and interact with the spaces its in as well as the objects around it.The createVector function made it possible by giving the 
