--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						</header>
 
 
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image featured"><img src="background" alt="" /></span>
 
 
 					</section>
