--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<header class="major">
 
 
-							<h2>My top Five list,
+							<h2>My top Ten list!
 
 
 							<br />
@@ -155,6 +155,7 @@
 			                                           becuase it makes it so you can change your website in the way you want it to be making it 
 								   more special and Unique</p>
 							</section>"></span>
+	<img src="blob.PNG" alt="words"width="128" height="128"></span>	
 								<h3>Advanced JS:Natural Simulations</h3>
 								<p>The Advanced JS:Natural Simulation module is an expantion on the more basic intro to Js.
 									The advanced Js feture some new things like floors and randoms which are very important 
